[tool.poetry]
name = "huabar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pymongo = "^4.6.0"
httpx = "^0.25.1"
motor = "^3.3.2"
internetarchive = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
